Fixes the alignment issues in blog articles on small screens

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -780,7 +780,6 @@ Mobile
     }
     .single_blog {
         margin-bottom: 40px;
-        text-align: center;
     }
     .pagination {
         margin-top: 0;
